--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,13 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+#############
+## Gradle stuff
+#############
+
+/build
+/.gradle
+/eclipse
+/.settings
+.classpath
